all File replaced by Path  переписано по списку исправлений